--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
   max-width: 380px;
   background-color: #334247;
   margin-right: 18px;
-  padding: 30px 0 40px 0;
   position: relative;
   overflow: hidden;
   text-align: center;
@@ -10,47 +9,49 @@
 .price-card:last-child {
   margin-right: 0;
 }
+.price-card__subtitle {
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .price-card__title {
   font-weight: 700;
   font-size: 35px;
   line-height: 43px;
-  text-align: center;
   margin: 0;
 }
-.price-card__subtitle {
+.price-card__website-title {
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
   margin: 0;
-  margin-bottom: 33px;
 }
 .price-card__fee {
-  background-color: #5bb189;
-  margin: 0;
   font-weight: 700;
   font-size: 55px;
   line-height: 67px;
-  text-align: center;
   height: 105px;
-  padding-top: 19px;
-  padding-bottom: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .price-card__description {
   margin: 0;
   font-weight: 300;
   font-size: 15px;
-  line-height: 18px;
+  line-height: 18.29px;
   text-align: center;
-  height: 116px;
   padding: 40px 26px;
 }
-.price-card__list {
+.price-card__options-list {
   width: 100%;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
-.price-card__list_item {
+.price-card__options-list_item {
   height: 50px;
   display: flex;
   align-items: center;
@@ -58,7 +59,7 @@
   font-size: 15px;
   line-height: 18px;
 }
-.price-card__list_item:nth-last-child(even) {
+.price-card__options-list_item:nth-last-child(even) {
   background-color: #2a3438;
 }
 .price-card__arrow {
@@ -74,6 +75,7 @@
   width: 154px;
   height: 40px;
   margin-top: 39px;
+  margin-bottom: 40px;
 }
 .price-card__subtitle {
   position: relative;
@@ -93,7 +95,7 @@
   position: absolute;
   right: 0%;
   left: 69.35%;
-  top: 0%;
+  top: 20%;
 }
 
 .fee__green {
