change name of class

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   line-height: 24px;
   margin: 0;
 }
-.price-card__fee {
+.price-card__price {
   font-weight: 700;
   font-size: 55px;
   line-height: 67px;
