--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 .price-card__title {
   font-weight: 700;
   font-size: 35px;
   line-height: 43px;
   margin: 0;
+  margin-top: 32px;
 }
 .price-card__website-title {
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   margin: 0;
+  margin-bottom: 40px;
 }
 .price-card__price {
   font-weight: 700;
