--- a/styles/common-styles.scss
+++ b/styles/common-styles.scss
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
 
   &__title {
@@ -23,6 +22,7 @@
     font-size: 35px;
     line-height: 43px;
     margin: 0;
+    margin-top: 32px;
   }
 
   &__website-title {
@@ -30,6 +30,7 @@
     font-size: 20px;
     line-height: 24px;
     margin: 0;
+    margin-bottom: 40px;
   }
 
   &__price {
