--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,22 @@
 }
 .price-card__subtitle {
   height: 130px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding-top: 33px;
+  padding-bottom: 40px;
 }
 .price-card__title {
   font-weight: 700;
   font-size: 35px;
   line-height: 43px;
+  text-align: center;
   margin: 0;
-  margin-top: 32px;
 }
 .price-card__website-title {
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
+  text-align: center;
   margin: 0;
-  margin-bottom: 40px;
 }
 .price-card__price {
   font-weight: 700;
