--- a/styles/common-styles.scss
+++ b/styles/common-styles.scss
@@ -12,25 +12,24 @@
 
   &__subtitle {
     height: 130px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding-top: 33px;
+    padding-bottom: 40px;
   }
 
   &__title {
     font-weight: 700;
     font-size: 35px;
     line-height: 43px;
+    text-align: center;
     margin: 0;
-    margin-top: 32px;
   }
 
   &__website-title {
     font-weight: 300;
     font-size: 20px;
     line-height: 24px;
+    text-align: center;
     margin: 0;
-    margin-bottom: 40px;
   }
 
   &__price {
